--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net472" />
+  <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
+  <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.ChromeDriver" version="81.0.4044.6900" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
 </packages>
