--- a/packages.config
+++ b/packages.config
@@ -16,6 +16,13 @@
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
   <package id="NuGet.Frameworks" version="5.0.0" targetFramework="net472" />
+  <package id="NUnit" version="2.7.1" targetFramework="net472" />
+  <package id="NUnit.ConsoleRunner" version="3.11.1" targetFramework="net472" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.6.0" targetFramework="net472" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.8.0" targetFramework="net472" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.6.0" targetFramework="net472" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.7" targetFramework="net472" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.ChromeDriver" version="81.0.4044.6900" targetFramework="net472" />
